# lambda-image-resize-rust

./: Cargo.toml  LICENSE  Makefile  README.md
src/: config.rs  main.rs
